# dev-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  cli.py  context.py  package-lock.json  pyproject.toml  security.py  server.py  server.start.txt
brain/: __init__.py  dependency.py  guardian.py  handoff_engine.py  orchestrator.py  phase_manager.py  prd_manager.py  project_readiness.py  requirements.py  sync_engine.py  todo_engine.py
docs/: antigravity.md  architecture-v2.md  open-design.md  release-notes-v2.0.0.md  security.md  user_manual.md  workspaces.md
docs/releases/: v2.0.0-summary.md
prompts/: __init__.py  definitions.py
resources/: __init__.py  definitions.py
tests/: test_v2_features.py  validate_mcp_flow.py
tools/: __init__.py  context_mgmt.py  file_ops.py  git_ops.py  search.py  terminal.py
